# annoying-boxes-puzzle

./: README.md  annoying-boxes-puzzle.cabal
src/: AnnoyingBoxesPuzzle.hs
