name:                annoying-boxes-puzzle
version:             0.1.0.0
synopsis:            Solve an annoying boxes puzzle
description:         Solve an annoying boxes puzzle
homepage:            https://github.com/FranklinChen/annoying-boxes-puzzle
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable annoying-boxes-puzzle
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             AnnoyingBoxesPuzzle.hs
  ghc-options:         -Wall
  build-depends:       base >= 4 && < 5

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/annoying-boxes-puzzle
